Updated: fixed (partially) subheader component on mobile

--- a/src/components/Subheader/Subheader.module.scss
+++ b/src/components/Subheader/Subheader.module.scss
@@ -9,8 +9,13 @@
 }
 
 .section {
+  height: 100px;
   background-color: $grayCool-50;
   border-bottom: 1px solid $grayCool-200;
+
+  @include respond-below(md) {
+    width: 100%;
+  }
 }
 
 .subheader {
